# frame-generator

./: .gitignore  .gitmodules  AppData.hs  Application.hs  Foundation.hs  Frame.hs  FrameCreator.hs  Home.hs  Main.hs  Makefile  README.md  Utils.hs  frame-generator-backend.cabal  frame-generator.cabal  routes  stack.yaml
backend/: .gitignore  AppData.hs  Application.hs  EditFrame.hs  Foundation.hs  Frame.hs  FrameCreator.hs  Home.hs  Main.hs  Model.hs  Utils.hs  cp.sh  frame-generator-backend.cabal  make_keter.sh  routes  stack.yaml
backend/Handler/: Admin.hs  AppWebSocket.hs  EditFGTemplate.hs  EditFrame.hs  Frame.hs  Home.hs
backend/Utils/: FrameCreator.hs  Misc.hs  PatternManage.hs
backend/app/: devel.hs
backend/config/: keter.yml  models  routes  settings.yml  test-settings.yml
backend/templates/: default-layout.hamlet
common/: Common.hs  Message.hs  default.nix  frame-generator-common.cabal
frontend/: default.nix  frame-generator-frontend.cabal
frontend/src/: CSSClass.hs  EditFGTemplate.hs  EditForeGround.hs  EditMask.hs  Lib.hs  PatternBrowser.hs  Utils.hs  style.css
src/: Lib.hs
