name:               frame-generator-backend
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          frame-generator-backend
  main-is:          Main.hs
  other-modules:    Application
                    AppData
                    Foundation
                    Home
                    FrameCreator
                    Frame
                    Utils

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , yesod-form
                , diagrams
                , diagrams-core
                , diagrams-lib
                , diagrams-rasterific
                , JuicyPixels
                , bytestring
                , path-pieces
                , random
                , text
                , containers
                , conduit

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
