name:               frame-generator-common
version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple

library
  ghc-options:      -Wall -fwarn-tabs -O2

  exposed-modules: Common
                   Message
  build-depends:  base
                  , aeson
                  , text
                  , data-default
