name: frame-generator-frontend
version: 1.1.0
cabal-version: >=1.10
build-type: Simple
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
author: Divam Narula <dfordivam@gmail.com>
extra-source-files:
  README.md
  src/style.css

source-repository head
  type:     git
  location: https://github.com/dfordivam/frame-generator

library
  hs-source-dirs:      src
  exposed-modules:
      Lib

  other-modules:
      EditFGTemplate
      Utils
      PatternBrowser
      CSSClass

  build-depends:
      base
    , text
    , ghcjs-dom
    , reflex
    , reflex-dom
    , reflex-dom-core
    , containers == 0.5.*
    , file-embed
    , bytestring
    , frame-generator-common >= 1.1 && < 1.2
    , aeson
    , reflex-dom-contrib
    , uri-bytestring
    , lens
    , data-default
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

  if impl(ghcjs)
    build-depends: ghcjs-base

executable frame-generator-frontend
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures
  build-depends:
      base
    , frame-generator-frontend -any
  default-language:    Haskell2010
